# pal

./: .codecov.yml  .gitignore  .travis.yml  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  PreLoad.cmake  README.md  Vagrantfile  build.rs  pal.py  setup.py  shoulder.py
devpal/linux/: CMakeLists.txt  Makefile.in  driver.c
devpal/linux/armv8a/aarch64/: hvc.c  ioctl.c  smc.c  sys.c  sysl.c
devpal/linux/generic/: read_mem16.c  read_mem32.c  read_mem64.c  read_mem8.c  write_mem16.c  write_mem32.c  write_mem64.c  write_mem8.c
devpal/linux/x64/: CMakeLists.txt  cpuid.c  in_16.c  in_32.c  in_8.c  out_16.c  out_32.c  out_8.c  rdmsr.c  rdtsc.c  read_cr0.c  read_cr2.c  read_cr3.c  read_cr4.c  read_cr8.c  wrmsr.c
devpal/linux/x64/amd/: ioctl.c  vmmcall.c
devpal/linux/x64/intel/: ioctl.c  vmcall.c  vmcall_hyperv.c  vmcall_kvm.c  vmcall_xen.c
example/c/: CMakeLists.txt
example/c++11/amd/: CMakeLists.txt  basic_usage.cpp
example/c++11/armv8a/: CMakeLists.txt  basic_usage.cpp
example/c++11/intel/: CMakeLists.txt  basic_usage.cpp  hypercall.cpp
example/c/amd/: CMakeLists.txt  basic_usage.c
example/c/armv8a/: CMakeLists.txt  basic_usage.c
example/c/armv8a/pal/a64/: hvc.h  read_mem.h  smc.h  write_mem.h
example/c/intel/: CMakeLists.txt  acpi.c  basic_usage.c  hypercall.c  pcie.c
example/rust/armv8a/: Cargo.toml
example/rust/armv8a/src/: basic_usage.rs  main.rs
libpal/: CMakeLists.txt  control_registers_x64.asm  cpuid_x64.asm  extended_control_registers_x64.asm  libpal.h  vmwrite_x64.asm
libpal/amd_64bit_linux_ioctl/: CMakeLists.txt  in_32.c  out_16.c  rdtsc.c  read_cr0.c  read_cr3.c  read_cr8.c  read_mem32.c  write_cr3.c  write_mem16.c  write_mem32.c
libpal/amd_64bit_systemv_gnuinline/: CMakeLists.txt
libpal/amd_64bit_systemv_gnuinline/include/pal/instruction/: cpuid_inline.h  in_16_inline.h  in_32_inline.h  rdtsc_inline.h  read_cr2_inline.h  write_cr0_inline.h
libpal/armv8a-aarch64-linux-devpal/: sysl.c
libpal/armv8a-aarch64-none-aapcs64/: CMakeLists.txt  sysl.s
libpal/armv8a_aarch64_aapcs64_gas/: CMakeLists.txt  sys.s
libpal/armv8a_aarch64_aapcs64_gnuinline/include/pal/aarch64/: hvc_inline.h  smc_inline.h  sys_inline.h  sysl_inline.h
libpal/armv8a_aarch64_linux_ioctl/: CMakeLists.txt  hvc.c  smc.c  sys.c  sysl.c  write_mem64.c  write_mem8.c
libpal/intel_64bit_linux_ioctl/: CMakeLists.txt  cpuid.c  in_16.c  in_8.c  out_32.c  out_8.c  rdmsr.c  read_cr4.c  read_mem16.c  read_mem64.c  read_mem8.c  vmcall.c  vmcall_hyperv.c  vmcall_kvm.c  vmread.c  vmwrite.c  write_cr0.c  write_cr2.c  write_cr4.c  wrmsr.c  xgetbv.c  xsetbv.c
libpal/intel_64bit_ms64_masm/: CMakeLists.txt  in_16.asm  in_32.asm  in_8.asm  out_16.asm  out_32.asm  out_8.asm  rdmsr.asm  read_cr8.asm  vmcall.asm  vmcall_hyperv.asm  vmcall_kvm.asm  vmcall_xen.asm  vmwrite.asm  write_cr2.asm  write_cr3.asm  write_cr8.asm  xsetbv.asm
libpal/intel_64bit_systemv_gnuinline/: CMakeLists.txt
libpal/intel_64bit_systemv_gnuinline/include/pal/instruction/: cpuid_inline.h  in_8_inline.h  out_16_inline.h  out_32_inline.h  out_8_inline.h  rdmsr_inline.h  read_cr0_inline.h  read_cr3_inline.h  (+8 more)
libpal/intel_64bit_systemv_nasm/: CMakeLists.txt  bsr.asm  clflush.asm  cpuid.asm  in_32.asm  invlpg.asm  invvpid_checked.asm  lfence.asm  lidt.asm  mfence.asm  read_cr0.asm  read_cr4.asm  read_cr8.asm  read_ds.asm  read_es.asm  read_ldtr.asm  read_mem16.asm  read_mem32.asm  read_mem64.asm  read_mem8.asm  read_rflags.asm  read_tr.asm  sfence.asm  sgdt.asm  vmcall.asm  vmcall_hyperv.asm  vmcall_kvm.asm  vmcall_xen.asm  vmptrld_checked.asm  vmptrst.asm  vmptrst_checked.asm  vmread.asm  vmxon.asm  wbinvd.asm  write_cr3.asm  write_cr4.asm  write_fs.asm  write_gs.asm  write_ldtr.asm  write_mem16.asm  (+6 more)
libpal/intel_64bit_windows_ioctl/: CMakeLists.txt  cpuid.c  get_devpal_handle.c  in_16.c  in_32.c  in_8.c  out_16.c  out_32.c  out_8.c  rdmsr.c  vmcall.c  vmcall_hyperv.c  vmcall_kvm.c  vmcall_xen.c  wrmsr.c
libpal/x64-64bit-linux-devpal/: CMakeLists.txt  read_cr2.c  vmcall.c  vmcall_xen.c
libpal/x64-64bit-none-ms64/: cpuid.asm  rdmsr.asm  read_cr0.asm  read_cr2.asm  read_cr3.asm  read_cr4.asm  read_cr8.asm  vmread.asm  vmwrite.asm  write_cr0.asm  write_cr2.asm  write_cr3.asm  write_cr4.asm  write_cr8.asm  wrmsr.asm  xgetbv.asm  xsetbv.asm
libpal/x64-64bit-none-systemv/: CMakeLists.txt  bsf.asm  bsr.asm  clflush.asm  cpuid.asm  hlt.asm  in_16.asm  in_32.asm  in_8.asm  invd.asm  invept.asm  invept_checked.asm  invlpg.asm  invvpid.asm  invvpid_checked.asm  lfence.asm  lgdt.asm  lidt.asm  mfence.asm  out_16.asm  out_32.asm  out_8.asm  pause.asm  popcnt.asm  rdmsr.asm  rdtsc.asm  rdtscp.asm  read_cr0.asm  read_cr2.asm  read_cr3.asm  read_cr4.asm  read_cr8.asm  read_cs.asm  read_dr7.asm  read_ds.asm  read_es.asm  read_fs.asm  read_gs.asm  read_ldtr.asm  read_rflags.asm  (+39 more)
test/c++11/armv8-a/aarch32/: CMakeLists.txt  cpacr.cpp  edeccr.cpp  edecr.cpp  main.cpp
test/c++11/armv8a/aarch64/: CMakeLists.txt  main.cpp
test/c++11/intel/: CMakeLists.txt  cpuid.cpp  facs.cpp  guest_interrupt_status.cpp  ia32_feature_control.cpp  leaf_01.cpp  leaf_04.cpp  leaf_0D.cpp  main.cpp  pcie_config_space.cpp  read_cr3.cpp  write_cr3.cpp  xcr0.cpp
test/c++11/intel_x64/: CMakeLists.txt  cpuid.cpp  cr3.cpp  eptp.cpp  facs.cpp  guest_interrupt_status.cpp  ia32_feature_control.cpp  leaf_01.cpp  leaf_04.cpp  leaf_0D.cpp  main.cpp  rdmsr.cpp  xcr0.cpp
test/c/armv8-a/aarch64/: CMakeLists.txt  gich_vmcr.c  spsr_el2.c
test/c/armv8a/aarch32/: CMakeLists.txt  cpacr.c  edeccr.c  edecr.c  main.c
test/c/intel/: CMakeLists.txt  eptp.c  ia32_feature_control.c  leaf_04.c  pcie_config_space.c  rdmsr.c  read_cr0.c  read_cr3.c  wrmsr.c  xcr0.c
test/c/intel_x64/: CMakeLists.txt  cpuid.c  cr3.c  eptp.c  facs.c  guest_interrupt_status.c  ia32_feature_control.c  leaf_01.c  leaf_04.c  leaf_0D.c  main.c  rdmsr.c  write_cr3.c  xcr0.c
test/rust/intel/: Cargo.toml
test/rust/intel/src/: cpuid.rs  cr3.rs  eptp.rs  guest_interrupt_status.rs  ia32_feature_control.rs  leaf_01.rs  leaf_04.rs  leaf_0d.rs  main.rs  rdmsr.rs  read_cr3.rs  write_cr3.rs  xcr0.rs
(+4517 files in other folders)
