[package]
name = "pal"
version = "0.1.0"
authors = ["Jared Wright <awsjared@amazon.com>"]
edition = "2018"
build = "cargo/build.rs"

[lib]
path = "cargo/lib.rs"

[dependencies]
cty = "0.2.1"
term = "0.7.0"

[build-dependencies]
pkg-config = "0.3.16"

[features]
intel_64bit_linux_ioctl = []
intel_64bit_systemv_nasm = []
