add_library(libpal INTERFACE)

if(${PAL_LIBPAL_ABI} STREQUAL x64-64bit-none-ms64)
    add_subdirectory(x64-64bit-none-ms64)
    target_link_libraries(libpal INTERFACE pal_x64_64bit_none_ms64)
elseif(${PAL_LIBPAL_ABI} STREQUAL x64-64bit-none-systemv)
    add_subdirectory(x64-64bit-none-systemv)
    target_link_libraries(libpal INTERFACE pal_x64_64bit_none_systemv)
elseif(${PAL_LIBPAL_ABI} STREQUAL x64-64bit-linux-devpal)
    add_subdirectory(x64-64bit-linux-devpal)
    target_link_libraries(libpal INTERFACE pal_x64_64bit_linux_devpal)
else()
    message(FATAL_ERROR "Cmake config PAL_LIBPAL_ABI='${PAL_LIBPAL_ABI}' is not a valid value")
endif()
