if(
    PAL_INTEL_64BIT_LINUX_IOCTL OR
    PAL_INTEL_64BIT_MS64_MASM OR
    PAL_INTEL_64BIT_SYSTEMV_GNUINLINE OR
    PAL_INTEL_64BIT_SYSTEMV_NASM OR
    PAL_INTEL_64BIT_WINDOWS_IOCTL
)
    add_subdirectory(intel)
endif()

if(
    PAL_AMD_64BIT_SYSTEMV_GNUINLINE OR
    PAL_AMD_64BIT_LINUX_IOCTL
)
    add_subdirectory(amd)
endif()

if(
   PAL_ARMV8A_AARCH64_LINUX_IOCTL OR
   PAL_ARMV8A_AARCH64_AAPCS64_GNUINLINE
)
    add_subdirectory(armv8a)
endif()
