add_library(c++_intel_example_dependencies INTERFACE)

if(PAL_INTEL_64BIT_SYSTEMV_NASM)
    target_link_libraries(c++_intel_example_dependencies INTERFACE pal_intel_64bit_systemv_nasm c++11_intel_64bit_systemv_nasm)
elseif(PAL_INTEL_64BIT_LINUX_IOCTL)
    target_link_libraries(c++_intel_example_dependencies INTERFACE pal_intel_64bit_linux_ioctl c++11_intel_64bit_linux_ioctl)
elseif(PAL_INTEL_64BIT_SYSTEMV_GNUATT)
    target_link_libraries(c++_intel_example_dependencies INTERFACE pal_intel_64bit_systemv_gnuatt c++11_intel_64bit_systemv_gnuatt)
elseif(PAL_INTEL_64BIT_SYSTEMV_GNUINTEL)
    target_link_libraries(c++_intel_example_dependencies INTERFACE pal_intel_64bit_systemv_gnuintel c++11_intel_64bit_systemv_gnuintel)
elseif(PAL_INTEL_64BIT_MS64_MASM)
    target_link_libraries(c++_intel_example_dependencies INTERFACE pal_intel_64bit_ms64_masm c++11_intel_64bit_ms64_masm)
else()
    message(FATAL_ERROR "Must enable at least one Intel-based pal implementation to build Intel example projects")
endif()

add_executable(c++_basic_usage basic_usage.cpp)
target_link_libraries(c++_basic_usage c++_intel_example_dependencies)

add_executable(c++_hypercall hypercall.cpp)
target_link_libraries(c++_hypercall c++_intel_example_dependencies)
