[package]
name = "pal_armv8a_rust_example"
version = "0.1.0"
authors = ["Jared Wright <awsjared@amazon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pal = { path = "../../../", features = ["armv8a_aarch64_linux_ioctl"] }
